feat: APK download controller, download gate, web app-apk
- ApkDownloadController.java (new)
- DownloadGate.java (new)
- app-apk.js (new)
- web: openapi sync, api-client regen, app-actions-pack updates
- README, ApiDispatcher, TtsCenter, SemanticCenter fixes